--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -19,7 +19,7 @@ body {
   flex-direction: column;
   align-items: stretch;
   justify-content: stretch;
-  gap: 32px;
+  gap: 64px;
 }
 
 .title {
@@ -40,6 +40,12 @@ body {
   gap: 16px;
 }
 
+.App .info-text {
+  font-size: 16px;
+  color: rgb(70, 68, 83);
+  text-align: center;
+}
+
 .App .error-text {
   font-size: 14px;
   color: rgb(172, 24, 24);
@@ -57,13 +63,84 @@ body {
   cursor: pointer;
 }
 
+.App .small-text-button {
+  font-size: 14px;
+  color: rgb(137, 137, 184);
+}
+
+.App .bubble-details-section {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 18px;
+}
+
+.App .bubble-details {
+  flex: 0;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  align-items: flex-start;
+}
+
+.App .details-row {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  max-width: 95vw;
+  overflow: hidden;
+}
+
+.details-row .details-label {
+  flex: 0;
+  font-size: 14px;
+  color: rgb(120, 120, 143);
+  width: 60px;
+  min-width: 60px;
+}
+
+.details-row .details-text {
+  flex: 1;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 16px;
+  color: rgb(70, 68, 83);
+  overflow: hidden;
+  word-wrap: break-word;
+}
+
 @media only screen and (max-width: 820px) {
 
   .App {
-    width: 100%;
-    padding: 0 10px;
+    width: 95vw;
+    /* padding: 48px 10px; */
   }
 
+}
+
+@media only screen and (max-width: 400px) {
+
+  .App .details-row {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+    padding-bottom: 8px;
+  }
+
+  .details-row .details-text {
+    padding-left: 16px;
+  }
+
+}
+
+@media only screen and (max-width: 640px) {
+
+  .App .newTask {
+    flex-direction: column;
+    align-items: center;
+  }
+    
 }
 
 .loader {
